--- a/CSS3/5.colors.html
+++ b/CSS3/5.colors.html
@@ -11,7 +11,9 @@
         /* color: rgb(255, 0, 0);
         opacity: 0.5; */
 
-        color: rgba(255, 0, 0, 0.5);
+        /* color: rgba(1, 156, 113, 1); */
+
+        color: #6a7f5b;
         
     }
 </style>
